Got unit test working with babel

--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -18,7 +18,7 @@
       </tr>
       </thead>
       <tbody>
-      <tr data-ng-repeat="student in students">
+      <tr data-ng-repeat="student in home.students">
         <td>{{student.id}}</td>
         <td>{{student.first}}</td>
         <td>{{student.last}}</td>
