Updated to use this instead of scope

--- a/src/app/components/add/add.html
+++ b/src/app/components/add/add.html
@@ -1,12 +1,12 @@
 <br />
 <div class="center addcontent">
   <div class="add">
-    <label for="first">First Name: </label><input type="text" id="first" ng-model="first" />
+    <label for="first">First Name: </label><input type="text" id="first" ng-model="student.first" />
   </div>
   <div class="add">
-    <label for="last">Last Name: </label><input type="text" id="last" ng-model="last" />
+    <label for="last">Last Name: </label><input type="text" id="last" ng-model="student.last" />
   </div>
   <div class="addbutton">
-    <button class="button" data-ng-click="add()">Add</button>
+    <button class="button" data-ng-click="student.add()">Add</button>
   </div>
 </div>
