--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -23,7 +23,7 @@
         <td>{{student.first}}</td>
         <td>{{student.last}}</td>
         <td><a href="#/update/{{student.id}}">Update</a></td>
-        <td><a href="#/" data-ng-click="delete(student.id)">Delete</a></td>
+        <td><a href="#/" data-ng-click="home.delete(student.id)">Delete</a></td>
       </tr>
       </tbody>
     </table>
