--- a/src/app/components/update/update.html
+++ b/src/app/components/update/update.html
@@ -1,15 +1,15 @@
 <br />
 <div class="center addcontent">
   <div class="add">
-    <label class="id">ID:</label><span>{{ id }}</span>
+    <label class="id">ID:</label><span>{{ student.id }}</span>
   </div>
   <div class="add">
-    <label for="first">First Name: </label><input type="text" id="first" ng-model="first" />
+    <label for="first">First Name: </label><input type="text" id="first" ng-model="student.first" />
   </div>
   <div class="add">
-    <label for="last">Last Name: </label><input type="text" id="last" ng-model="last" />
+    <label for="last">Last Name: </label><input type="text" id="last" ng-model="student.last" />
   </div>
   <div class="addbutton">
-    <button class="button" data-ng-click="update()">Update</button>
+    <button class="button" data-ng-click="student.update()">Update</button>
   </div>
 </div>
